--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.0",
     "next": "15.0.2",
+    "randomstring": "^1.3.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "resend": "^4.0.1-alpha.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/randomstring": "^1.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
