--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "randomstring": "^1.3.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "resend": "^4.0.1-alpha.0",
     "zod": "^3.23.8"
   },
