--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.72",
     "@react-email/components": "^0.0.28",
+    "ai": "^3.4.33",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.8.0",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
+    "openai": "^4.72.0",
     "randomstring": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
